--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nanotechpro | Reparación Profesional de Dispositivos Electrónicos</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/assets/img/logo.png" />
+
+  <!-- Meta Descripción -->
+  <meta name="description"
+    content="En Nanotechpro somos expertos en reparación de móviles, tablets, consolas y ordenadores. Calidad garantizada, servicio rápido y promociones especiales." />
+
+  <!-- Palabras clave -->
+  <meta name="keywords"
+    content="Nanotechpro, reparación de móviles, servicio técnico, reparar tablet, reparar consolas, ordenadores, Sevilla, tecnología, promociones" />
+
+  <!-- Autor -->
+  <meta name="author" content="Nanotechpro" />
+
+  <!-- Meta Open Graph (Redes Sociales) -->
+  <meta property="og:title" content="Nanotechpro | Expertos en Reparación Electrónica" />
+  <meta property="og:description"
+    content="Reparamos tu dispositivo con precisión, rapidez y garantía. ¡Descubre nuestras promociones!" />
+  <meta property="og:image" content="https://tudominio.com/assets/img/og-image.jpg" />
+  <meta property="og:url" content="notengodominiojaja,estedeprueba" />
+  <meta property="og:type" content="website" />
+
+  <!-- Meta Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Nanotechpro | Reparación Profesional" />
+  <meta name="twitter:description"
+    content="Servicio técnico experto en móviles, tablets y ordenadores. ¡Calidad y velocidad garantizadas!" />
+  <meta name="twitter:image" content="https://tudominio.com/assets/img/og-image.jpg" />
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
